# excel_MVP

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_DOCKER.md  README.md  docker-compose.production.yml  docker-compose.yml  manifest.docker.xml  manifest.production.xml  manifest.xml
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  run_https.py  test_services.py
backend/services/: action_validator.py  chat_service.py  embedding_service.py  error_check_service.py  model_service.py  pdf_service.py  session_service.py  summary_service.py
backend/test_data/: README.md  model_with_errors.json  sample_company.txt  sample_model.json
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/commands/: commands.ts
frontend/taskpane/: config.ts  index.tsx  taskpane.html
frontend/taskpane/components/: App.css  App.tsx  ErrorChecker.tsx  ModelChat.tsx  PdfUpload.tsx
nginx/: nginx.conf
